<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".ImcCalculator">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?attr/backgroundColor"
            android:contentDescription="@string/back_btn"
            android:onClick="backBtn"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/tvTitleBMICalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/textColor"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:text="@string/app_name" />

    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="?attr/textColor">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/scale"
            android:text="@string/BMI_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabInspiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/heart"
            android:text="@string/inspiration_tab" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>