<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:onClick="goImc"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:background="?attr/backgroundColor"
            android:contentDescription="@string/settings_btn"
            android:onClick="goSettings"
            android:scaleType="center"
            app:srcCompat="@drawable/settings" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?attr/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_btn_orange"
            android:onClick="goImc"
            android:padding="10dp"
            android:text="@string/begin"
            android:textColor="@color/buttonTextColor" />

        <Button
            android:id="@+id/btntutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_btn"
            android:onClick="goTutorial"
            android:padding="10dp"
            android:text="@string/whatsBMI"
            android:textColor="@color/buttonTextColor" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-6646767279000716/2112204007"></com.google.android.gms.ads.AdView>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>