<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Others">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnBackOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?attr/backgroundColor"
                android:contentDescription="@string/back_btn"
                android:onClick="backBtn"
                app:srcCompat="@drawable/arrow" />

            <TextView
                android:id="@+id/tvTitleOthers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/others"
                android:textColor="?attr/textColor"
                android:textSize="36sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/LayoutExplanation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvExplanationOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/explanation_others"
                android:textColor="?attr/textColor"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>