<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?attr/backgroundColor"
                android:contentDescription="@string/back_btn"
                android:onClick="backBtn"
                app:srcCompat="@drawable/arrow" />

            <TextView
                android:id="@+id/tvTitleSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_btn"
                android:textColor="?attr/textColor"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@string/settings_btn" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDarkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:layout_weight="1"
                android:text="@string/darkmode"
                android:textColor="?attr/textColor"
                android:textSize="30sp" />

            <Switch
                android:id="@+id/darkModeToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:checked="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="30dp">

            <Button
                android:id="@+id/btnChangeLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:padding="5dp"
                android:text="@string/change_lang"
                android:textColor="@color/buttonTextColor" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>